<resources>

    <string name="app_name">DiningMania</string>
    <string name="icon">R.drawable.card_background</string>
    <string name="todo">TODO</string>
    <string name="loginUser">Login</string>
    <string name="logoDiningMania">logoDiningMania</string>
    <string name="SignUp"> Sign up @ "http://www.rvrc.nus.edu.sg"  </string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="menu">Menu</string>
    <string name="scan">Scan</string>
    <string name="review">Review</string>
    <string name="imageofstudent">imageofstudent</string>
    <string name="title_activity_homepage_navigation">homepageNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="action_settings">Settings</string>
    <string name="background_for_login_page">Login Background</string>
    <string name="used_point">Used Point</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="message">Hi! Thanks for using Dining Mania. Please register or login in using your email address and Matrix card number and read the instructions carefully. 1) You can indicate your meal choice by click on menu items at least one day before consuming the meal. 2) When you take the meal, please scan the QR code at the according counter. 3) If what you have indicated matches what you have scanned, one point will be credited to you. 4) You can also write reviews to earn one point per feedback. 5) You can only scan once per day. 6) In the end of this week, you will receive notification to redeem some gits if you have enough points. Let us start!</string>

</resources>
